build: regenerate code
